2nd Year/2nd Semester/POO/Práticas/PL2/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-8-openjdk-amd64/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.11.jar:/usr/share/bluej/hamcrest-core-1.3.jar:/usr/share/bluej/lang-stride.jar:/usr/share/bluej/userlib/pi4j-device.jar:/usr/share/bluej/userlib/pi4j-core.jar:/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/usr/share/bluej/userlib/pi4j-service.jar:/media/diogoesnog/3831-6132/POO/Práticas/PL2
-d
/media/diogoesnog/3831-6132/POO/Práticas/PL2/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/usr/share/bluej/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/media/diogoesnog/3831-6132/POO/Práticas/PL2/Ex2.java
<---- end of javadoc command ---->
Loading source file /media/diogoesnog/3831-6132/POO/Práticas/PL2/Ex2.java...
/media/diogoesnog/3831-6132/POO/Práticas/PL2/Ex2.java:28: error: '(' expected
        if arr[posicao] > arr[i] posicao = i;}
          ^
/media/diogoesnog/3831-6132/POO/Práticas/PL2/Ex2.java:28: error: ')' expected
        if arr[posicao] > arr[i] posicao = i;}
                                ^
2 errors
